<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_sort_by_popular_movies"
        android:orderInCategory="1"
        android:title="@string/sort_by_popular_movies"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_by_top_rated"
        android:orderInCategory="2"
        android:title="@string/sort_by_top_rated"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_my_favorites"
        android:orderInCategory="3"
        android:title="@string/my_favorites"
        app:showAsAction="never"/>

</menu>